# hh3-matmul-demo

./: .gitignore  CMakeLists.txt  nitish.job
.run/: gpu_demo_debug.run.xml  gpu_demo_release.run.xml  inner_prod_release.run.xml  outer_prod_release.run.xml
.run/cpu_comm_demo/: comm_cpu_demo.run.xml
blas_demo/: CMakeLists.txt  blas_demo.cpp  data.h  states.h  tasks.h  utility.h
comm_cpu_demo/: CMakeLists.txt  comm_cpu_demo.cc  mm.ipynb
comm_cpu_demo/data/: matrix_block_data.h  serialization.h
comm_cpu_demo/state/: output_state.h  partial_computation_state.h
comm_cpu_demo/task/: accumulate_task.h  comm_task.h
comm_gpu_demo/: CMakeLists.txt  comm_gpu_demo.cpp  comm_outer_prod.cpp  compare.cpp  gpu_demo.cpp  inner_prod.cpp  mm.h  mpi_outer_prod.cpp  outer_prod.cpp  utility.h
comm_gpu_demo/data/: cuda_block_data.h  cuda_matrix_block_data.h  data_type.h  matrix_block_data.h  matrix_data.h  matrix_meta_data.h  serialization.h  unified_matrix_block_data.h
comm_gpu_demo/execution_pipeline/: inner_product_exec_pipeline.h  multi_gpu_exec_pipeline.h
comm_gpu_demo/graph/: gpu_computation_graph.h  inner_product_cuda_graph.h
comm_gpu_demo/state/: cuda_input_block_state.h  inner_product_computation_state.h  output_state.h  partial_computation_state.h  partial_computation_state_manager.h
comm_gpu_demo/task/: addition_task.h  comm_task.h  contiguous_matrix_block_generator_task.h  cuda_copy_in_gpu_task.h  cuda_copy_out_gpu_task.h  cuda_product_task.h  inner_product_task.h  matrix_block_transformer_task.h  matrix_column_traversal_task.h  matrix_row_traversal_task.h  pair_generator_task.h
dist_blas_demo/: CMakeLists.txt  blas_demo.cpp  data.h  states.h  tasks.h  utility.h
dist_gpu_demo/: CMakeLists.txt  benchmark_outer_prod_2.cpp  benchmark_outer_prod_3.cpp  cibc.cpp  cibc_outer_prod_1.cpp  cibc_outer_prod_2.cpp  cibc_outer_prod_3.cpp  matrix_init.h  matrix_utility.h  mmd.h  mpi_outer_prod_cyclic2d.cpp  notchpeak_benchmark.cpp  notchpeak_outer_prod_1.cpp  notchpeak_outer_prod_2.cpp  notchpeak_outer_prod_cyclic2d.cpp  test_cublas.cpp  test_data.cpp  utility.h
dist_gpu_demo/data/: contiguous_sub_matrix_container.h  cuda_matrix_tile.h  cuda_memory.h  cyclic2d_matrix_container.h  data_packet.h  matrix_container_interface.h  matrix_meta_data.h  matrix_order.h  matrix_tile.h  matrix_tile_meta_data.h  redundant_matrix_container.h  tiled_sub_matrix_container.h  ttl_managed_memory.h  unified_matrix_tile.h  unified_memory.h
dist_gpu_demo/execution_pipeline/: outer_product_exec_pipeline.h
dist_gpu_demo/graph/: outer_product_cuda_graph.h  outer_product_cuda_graph_unified_memory.h
dist_gpu_demo/state/: outer_product_computation_state.h  outer_product_computation_state_manager.h  outer_product_cuda_state.h  outer_product_output_state.h
dist_gpu_demo/task/: accumulate_task.h  comm_tasks.h  cuda_copy_in_gpu_task.h  cuda_copy_out_gpu_task.h  cuda_product_task.h  matrix_col_traversal_task.h  matrix_row_traversal_task.h  ttl_managed_memory_recycler_task.h
dist_gpu_demo_v2/: CMakeLists.txt  benchmark1_v2.cpp  benchmark2_v2.cpp  benchmark_v2.cpp  data.h  demo1_v2.cpp  demo2_v2.cpp  demo_v2.cpp  graphs.h  matrix_utility.h  mmd.h  notchpeak_benchmark.cpp  states.h  tasks.h  test.cpp  utility.h  v2_benchmark1.cpp  v2_benchmark2.cpp  v2_demo1.cpp  v2_demo2.cpp  v2_tests.cpp
dist_gpu_demo_v3/: CMakeLists.txt  benchmark1_v3.cpp  data.h  demo1_v3.cpp  graphs.h  matrix_utility.h  mmd.h  states.h  tasks.h  utility.h  v3_benchmark1.cpp  v3_benchmark2.cpp  v3_demo1.cpp  v3_demo2.cpp  v3_tests.cpp
include/: common_data.h  common_matrix_utility.h  common_tasks.h  common_utility.h
tutorial3/: CMakeLists.txt  tutorial3.cc
tutorial3/state/: input_block_state.h  output_state.h  partial_computation_state.h  partial_computation_state_manager.h
tutorial3/task/: addition_task.h  matrix_column_traversal_task.h  matrix_row_traversal_task.h  product_task.h
